syntax = "proto3";

import public "google/protobuf/timestamp.proto";

// 如果是两个文件中消息类型一样，则会报错，就好比java中类名一摸一样，会报错道理是一样的，因此为了区分可以给每个.proto文件增加包
package com.czdx.grpc.lib.order;

// 是否如果是true，那么每一个message文件都会有一个单独的class文件 否则，message全部定义在outerclass文件里
option java_multiple_files = false;
// 生成java代码的包名
option java_package = "com.czdx.grpc.lib.order";
// 是用一个class文件来定义所有的message对应的java类
option java_outer_classname = "ParkingOrder";

service ParkingOrderService {
  rpc createParkingOrder(CreateOrderRequest) returns (CreateOrderReponse) {};
  rpc getParkingOrderDetail(OrderDetailRequest) returns (CreateOrderReponse) {};
  rpc confirmPay(ConfirmPayRequest) returns (ConfirmPayResponse) {};
  rpc changeOrderStatus(ChangeOrderRequest) returns (CreateOrderReponse) {};
  rpc searchOrder(searchOrderRequest) returns (searchOrderResponse) {};
}

message searchOrderRequest {
  string  orderNo = 1;
  int32 paymetnod = 2;
  int32 pageNum = 3;
  int32 pageSize = 4;
  string carNumber = 5;
}

message searchOrderResponse {
  // 返回状态码
  string status = 1;
  string mess = 2;


  repeated OrderDetail orderDetail = 3;

  int64 pageTotal = 4;

  int64 pageCurrent = 5;
}

message ChangeOrderRequest {
  string orderNo = 1;
}

message ConfirmPayRequest {
  string orderNo = 1;
  //支付类型 1为支付宝 2为微信
  int32 payType = 2;
}

message ConfirmPayResponse {
  // 返回状态码
  string status = 1;

  string mess = 2;
  // 返回订单详情
  string payUrl = 3;
}

message OrderDetailRequest {
  string orderNo = 1;
}

message CreateOrderRequest {
  // 车场编号
  string parkNo = 1;
  // 岗亭编号
  string passageNo = 2;
  // 车牌号
  string carNumber = 3;
  // 车型编码
  string carTypeCode = 4;
  // 入场时间
  string entryTime = 5;
  //出场时间
  string exitTime = 6;

  repeated OrderItem itemList = 7;

  repeated CouponInfo couponList = 8;

  string orderNo = 9;

}

message CouponInfo {
  int32 couponType = 1;

  int32 couponMold = 2;

  int32 couponValue = 3;

  string couponCode = 4;

  bool choosed = 5;

  bool canUse = 6;
}

message OrderItem {
  //场地ID
  int32 parkFieldId = 1;
  // 入场时间
  string entryTime = 2;
  //  //出场时间
  string exitTime = 3;

  double payedAmount = 4;
}

message CreateOrderReponse {
  // 返回状态码
  string status = 1;

  string mess = 2;
  // 返回订单详情
  OrderDetail orderDetail = 3;

  repeated CouponInfo couponlist = 4;
}

message OrderDetail {
  // 订单号
  string orderNo = 1;
  // 车场编号
  string parkNo = 2;
  // 岗亭编号
  string passageNo = 3;
  // 车牌号
  string carNumber = 4;
  // 车型编码
  string carTypeCode = 5;
  // 入场时间
  string entryTime = 6;
  // 应付金额（元）
  double payableAmount = 7;
  // 优惠金额（元）
  double discountAmount = 8;
  // 已付金额（元）
  double paidAmount = 9;
  // 实付金额（元）
  double payAmount = 10;
  //  支付方式
  string payMethod = 11;
  // 支付时间
  string payTime = 12;
  // 支付状态
  string payStatus = 13;
  // 支付流水号
  string payNumber = 14;
  // 过期时间
  string expireTime = 15;
  // 备注
  string remark = 16;
  // 创建时间
  string createTime = 17;
  // 更新时间
  string updateTime = 18;

  repeated OrderItem itemList = 19;

  string coupons = 20;
}


